Fix slight layout shift in `<Tweet />` header

--- a/packages/astro-embed-twitter/Tweet.css
+++ b/packages/astro-embed-twitter/Tweet.css
@@ -24,6 +24,7 @@
 }
 
 .tweet-profile img {
+	display: block;
 	border-radius: 50%;
 	color: transparent;
 	text-decoration: none;
